--- a/style.css
+++ b/style.css
@@ -14,14 +14,14 @@ body {
 #profileInfo {
 	grid-column-start: 2; 
 	grid-column-end: 4;
-	background-color: #00FFC4;
+	background-color: #78FFD6;
 	padding: 2vw;
 }
 
 #profileExperience {
 	grid-column-start: 5; 
 	grid-column-end: 7;
-	background-color: #00FFC4;
+	background-color: #78FFD6;
 	padding: 2vw;
 }
 
@@ -44,4 +44,62 @@ footer {
 	background-color: black;
 	display: flex;
 	justify-content: center;
+	margin-top: 2vw;
 }
+
+h1 {
+	font-family: 'Patua One', cursive;
+	font-size: 4.5vw;
+	margin: 0;
+	padding-top: 1vw;
+	text-align: center;
+	color: white;
+	letter-spacing: 0.25vw;
+}
+
+h2 {
+	font-family: 'Patua One', cursive;
+	margin: 0;
+	font-size: 2.5vw;
+	text-align: right;
+	padding-top: 1vw;
+}
+
+h3 {
+	font-family: 'Patua One', cursive;
+	text-align: left;
+	font-size: 2vw;
+	margin: 0;
+	padding-top: 1vw;
+	color: white;
+	letter-spacing: 0.2vw;
+}
+
+h4 {
+	font-family: 'Yantramanav', sans-serif;
+	margin: 0;
+	color: #16536D;
+	font-size: 1.5vw;
+}
+
+p {
+	font-family: 'Yantramanav', sans-serif;
+	margin: 0;
+}
+
+li {
+	font-family: 'Yantramanav', sans-serif;
+	margin: 0;
+}
+
+.contactBox {
+	display: flex;
+}
+
+.textTitle {
+	font-family: bold;
+}
+
+
+
+
