finalisation colonne gauche

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
 	grid-column-end: 4;
 	background-color: #78FFD6;
 	padding: 2vw;
+	border-radius: 1vw;
 }
 
 #profileExperience {
@@ -23,6 +24,7 @@ body {
 	grid-column-end: 7;
 	background-color: #78FFD6;
 	padding: 2vw;
+	border-radius: 1vw;
 }
 
 #profilePicture {
@@ -45,46 +47,51 @@ footer {
 	display: flex;
 	justify-content: center;
 	margin-top: 2vw;
+	border-radius: 1vw;
 }
 
 h1 {
-	font-family: 'Patua One', cursive;
+	font-family: 'Bree Serif', serif;
 	font-size: 4.5vw;
 	margin: 0;
 	padding-top: 1vw;
 	text-align: center;
 	color: white;
 	letter-spacing: 0.25vw;
+	line-height: 4.5vw;
 }
 
 h2 {
-	font-family: 'Patua One', cursive;
+	font-family: 'Bree Serif', serif;
 	margin: 0;
 	font-size: 2.5vw;
 	text-align: right;
 	padding-top: 1vw;
+	line-height: 3vw;
 }
 
 h3 {
-	font-family: 'Patua One', cursive;
+	font-family: 'Bree Serif', serif;
 	text-align: left;
-	font-size: 2vw;
+	font-size: 3vw;
 	margin: 0;
-	padding-top: 1vw;
+	padding-top: 2vw;
 	color: white;
 	letter-spacing: 0.2vw;
+	line-height: 3vw;
 }
 
 h4 {
 	font-family: 'Yantramanav', sans-serif;
 	margin: 0;
 	color: #16536D;
-	font-size: 1.5vw;
+	font-size: 1.9vw;
 }
 
 p {
 	font-family: 'Yantramanav', sans-serif;
 	margin: 0;
+	font-size: 1.4vw;
 }
 
 li {
@@ -92,8 +99,26 @@ li {
 	margin: 0;
 }
 
+#description {
+	padding-top: 1vw;
+	text-align: justify;
+	letter-spacing: 0.1vw;
+}
+
 .contactBox {
+	padding-top: 1vw;
+}
+
+.interest {
 	display: flex;
+	text-align: center;
+	margin-top: 2vw;
+}
+
+.interest img {
+	padding: 1vw;
+	width: 5vw;
+	height: auto;
 }
 
 .textTitle {
