--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 .container {
-	background-color: #16536D;
+	background-color: #445E93;
 	display: grid;
 	grid-template-columns: 6vw 13.5vw 13.5vw 2vw 29.5vw 29.5vw 6vw;
 	grid-template-rows: auto;
@@ -14,7 +14,7 @@ body {
 #profileInfo {
 	grid-column-start: 2; 
 	grid-column-end: 4;
-	background-color: #78FFD6;
+	background-color: #7EB2DD;
 	padding: 2vw;
 	border-radius: 1vw;
 }
@@ -22,7 +22,7 @@ body {
 #profileExperience {
 	grid-column-start: 5; 
 	grid-column-end: 7;
-	background-color: #78FFD6;
+	background-color: #7EB2DD;
 	padding: 2vw;
 	border-radius: 1vw;
 }
@@ -52,13 +52,13 @@ footer {
 
 h1 {
 	font-family: 'Bree Serif', serif;
-	font-size: 4.5vw;
+	font-size: 4vw;
 	margin: 0;
 	padding-top: 1vw;
 	text-align: center;
-	color: white;
 	letter-spacing: 0.25vw;
 	line-height: 4.5vw;
+	color: #F93943;
 }
 
 h2 {
@@ -68,6 +68,7 @@ h2 {
 	text-align: right;
 	padding-top: 1vw;
 	line-height: 3vw;
+	color: white;
 }
 
 h3 {
@@ -75,8 +76,7 @@ h3 {
 	text-align: left;
 	font-size: 3vw;
 	margin: 0;
-	padding-top: 2vw;
-	color: white;
+	color: #F93943;
 	letter-spacing: 0.2vw;
 	line-height: 3vw;
 }
@@ -84,8 +84,8 @@ h3 {
 h4 {
 	font-family: 'Yantramanav', sans-serif;
 	margin: 0;
-	color: #16536D;
-	font-size: 1.9vw;
+	color: #445E93;
+	font-size: 1.7vw;
 }
 
 p {
@@ -94,15 +94,23 @@ p {
 	font-size: 1.4vw;
 }
 
-li {
-	font-family: 'Yantramanav', sans-serif;
+ul {
+	padding-left: 2vw;
 	margin: 0;
 }
 
-#description {
+li {
+	font-family: 'Yantramanav', sans-serif;
+	margin: 0;
+	font-size: 1.3vw;
+}
+
+h5 {
 	padding-top: 1vw;
 	text-align: justify;
-	letter-spacing: 0.1vw;
+	font-size: 1.3vw;
+	margin: 0;
+	font-family: 'Yantramanav', sans-serif;
 }
 
 .contactBox {
@@ -127,6 +135,7 @@ li {
 
 .columns {
 	display: flex;
+	justify-content: space-between;
 }
 
 .textBox {
@@ -134,12 +143,12 @@ li {
 }
 
 .text1 {
-	color: #16536D;
+	color: #445E93;
 	font-size: 1.6vw;
 }
 
 .text2 {
-	color: white;
+	color: #FCECC9;
 	font-size: 1.5vw;
 }
 
@@ -151,11 +160,35 @@ li {
 	font-size: 1.3vw;
 }
 
-.leftColumn {
-	padding-right: 5vw;
+.rightColumn {
+	width: 27.5vw;
+	grid-column-start: 6; 
+	grid-column-end: 7;
 }
 
+.leftColumn {
+	padding-right: 5vw;
+	grid-column-start: 5; 
+	grid-column-end: 6;
+	width: 27.5vw;
+}
 
+.title {
+	padding-top: 2vw;
+}
+
+footer img {
+	width: 4vw;
+	height: auto;
+	margin-left: 3vw;
+	margin-right: 3vw;
+	margin-bottom: 2vw;
+}
+
+footer h3 {
+	text-align: center;
+	padding-bottom: 1vw;
+}
 
 
 
