transition sur le visage + animations typewriter

--- a/style.css
+++ b/style.css
@@ -1,205 +1,137 @@
-body {
+* {
 	margin: 0;
 	padding: 0;
+	font-family: 'Noto Serif', serif;
 }
 
-.container {
-	background-color: #445E93;
-	display: grid;
-	grid-template-columns: 6vw 13.5vw 13.5vw 2vw 29.5vw 29.5vw 6vw;
-	grid-template-rows: auto;
-	padding-top: 2vw;
+body {
+	background: linear-gradient(to right, rgba(201,201,201,1) 0%, rgba(246,246,246,1) 50%, rgba(201,201,201,1) 100%);
 }
 
-#profileInfo {
-	grid-column-start: 2; 
-	grid-column-end: 4;
-	background-color: #7EB2DD;
-	padding: 2vw;
-	border-radius: 1vw;
-}
-
-#profileExperience {
-	grid-column-start: 5; 
-	grid-column-end: 7;
-	background-color: #7EB2DD;
-	padding: 2vw;
-	border-radius: 1vw;
-}
-
-#profilePicture {
-	width: 23vw;
-	height: 23vw;
-	border-radius: 50%;
-	overflow: hidden;
-}
-
-#profilePicture img{
-	height: 100%;
-	width: auto;
-	margin-left: -8%;
-}
-
-footer {
-	grid-column-start: 2; 
-	grid-column-end: 7;
-	background-color: black;
+/* FIRST PART - HEADER */
+header {
 	display: flex;
-	justify-content: center;
-	margin-top: 2vw;
-	border-radius: 1vw;
+	flex-direction: column;
+	align-items: center;
+	margin: 1.2rem;
 }
 
 h1 {
-	font-family: 'Bree Serif', serif;
-	font-size: 4vw;
-	margin: 0;
-	padding-top: 1vw;
-	text-align: center;
-	letter-spacing: 0.25vw;
-	line-height: 4.5vw;
-	color: #F93943;
+	color: #28231D;
+	font-size: 1.2rem;
+	font-weight: 600;
 }
 
 h2 {
-	font-family: 'Bree Serif', serif;
-	margin: 0;
-	font-size: 2.5vw;
-	text-align: right;
-	padding-top: 1vw;
-	line-height: 3vw;
-	color: white;
+	color: #28231D;
+	font-size: 1rem;
+	font-weight: 300;
 }
 
-h3 {
-	font-family: 'Bree Serif', serif;
-	text-align: left;
-	font-size: 3vw;
-	margin: 0;
-	color: #F93943;
-	letter-spacing: 0.2vw;
-	line-height: 3vw;
+
+.typewriter h1 {
+	overflow: hidden;
+	white-space: nowrap;
+	animation: 
+		typing 3s steps(30, end),
+		blink-caret .8s step-end 7; 
+	animation-fill-mode: forwards;
 }
 
-h4 {
-	font-family: 'Yantramanav', sans-serif;
-	margin: 0;
-	color: #445E93;
-	font-size: 1.7vw;
+.typewriter h2 {
+	overflow: hidden;
+	white-space: nowrap;
+	animation: 
+		typing 2.5s 6s steps(28, end),
+		blink-caret .8s step-end 15;
+	animation-fill-mode: forwards;
+	opacity: 0;
 }
 
-p {
-	font-family: 'Yantramanav', sans-serif;
-	margin: 0;
-	font-size: 1.4vw;
+@keyframes typing {
+	from {width: 0} to {width: 100%}
+	0% {opacity: 1} 100% {opacity: 1}
 }
 
-ul {
-	padding-left: 2vw;
-	margin: 0;
+@keyframes blink-caret {
+	from, to {border-right: .15rem solid #00B6B2} 
+	50% {border-color: transparent}
+	100% {border-right: none}
 }
 
-li {
-	font-family: 'Yantramanav', sans-serif;
-	margin: 0;
-	font-size: 1.3vw;
+header span {
+	text-decoration: line-through;
 }
 
-h5 {
-	padding-top: 1vw;
-	text-align: justify;
-	font-size: 1.3vw;
-	margin: 0;
-	font-family: 'Yantramanav', sans-serif;
-}
+/* SECOND PART - CONTENT */
 
-.contactBox {
-	padding-top: 1vw;
-}
-
-.infos {
-	text-align: right;
-}
-
-.interest {
+.content {
 	display: flex;
-	text-align: center;
-	margin-top: 2vw;
+	width: 100%;
+	justify-content: space-around;
 }
 
-.interest img {
-	padding: 1vw;
-	width: 5vw;
-	height: auto;
-}
 
-.columns {
+.profile-picture {
 	display: flex;
-	justify-content: space-between;
+	flex-direction: column;
+	align-items: center;
 }
 
-.textBox {
-	padding-top: 1vw;
-}
-
-.text1 {
-	color: #445E93;
-	font-size: 1.6vw;
-}
-
-.text2 {
-	color: #FCECC9;
-	font-size: 1.5vw;
-}
-
-.text3 {
-	font-size: 1.3vw;
-}
-
-.text4 {
-	font-size: 1.3vw;
-}
-
-.rightColumn {
-	width: 27.5vw;
-	grid-column-start: 6; 
-	grid-column-end: 7;
-}
-
-.leftColumn {
-	padding-right: 5vw;
-	grid-column-start: 5; 
-	grid-column-end: 6;
-	width: 27.5vw;
-}
-
-.title {
-	padding-top: 2vw;
-}
-
-footer img {
-	width: 4vw;
+.profile-picture img {
 	height: auto;
-	margin-left: 3vw;
-	margin-right: 3vw;
-	margin-bottom: 2vw;
+	max-width: 20rem;
 }
 
-footer h3 {
-	text-align: center;
-	padding-bottom: 1vw;
+#hair {
+	position: relative;
+	right: .9rem;
+	z-index: 5;
+	transform: rotate(-15deg);
+	transition-duration: 1s;
 }
 
+#hair:hover {
+	transform: rotate(0deg) translateX(.9rem) translateY(1.2rem);
+	transform-origin: 10% 30%;
+}
 
+#eyes {
+	position: relative;
+	top: -3.5rem;
+	z-index: 4;
+}
 
+#nose {
+	position: relative;
+	top: -8rem;
+	z-index: 3;
+	transform: rotate(-5deg);
+	transition-duration: 1s;
+}
 
+#nose:hover {
+	transform: rotate(0deg) translateX(-.1rem) translateY(-1rem);
+	transform-origin: 10% 30%;
+}
 
+#mouth {
+	position: relative;
+	top: -12.1rem;
+	z-index: 2;
+	transform: rotate(7deg);
+	transition-duration: 1s;
+}
 
+#mouth:hover {
+	transform: rotate(-5deg) translateX(.4rem) translateY(-.9rem);
+	transform-origin: 10% 30%;
+}
 
+#shadow {
+	position: relative;
+	top: -15rem;
+	z-index: 1;
+}
 
-
-
-
-
-
-
+/* LAST PART - FOOTER */
